5/19/10 new model of surface charge density, to avoid divide-by-zero errors when area=0
5/19/10 assert necessary model conditions
5/19/10 add support for negative dielectric offset
5/19/10 add Stored Energy meter
5/19/10 consolidate meter range constants in CLConstants
# 0.00.04 (40879) May 19, 2010
5/19/10 new model, plate charge meter, disconnect plate charge control
5/18/10 reorganize model to be similar to specification
5/18/10 add dielectric offset to model values display
5/18/10 add descriptions to model values display via tool tips
5/18/10 display model values in a dialog, too crowded in the play area
5/18/10 implement new model provided by NP, using "2 parallel capacitors" approach
5/17/10 display plate charge value the same way in control and meter
5/17/10 add background to plate charge control
5/17/10 custom Piccolo slider for plate charge, first pass
5/17/10 change model so that user can set either voltage or charge
5/17/10 create spreadsheet version of model, for verification and debugging
5/17/10 revise model description
5/17/10 change format of values in Developer meter
5/15/10 concise model description in doc/model.txt
# 0.00.03 (40785) May 15, 2010
5/15/10 add surface charge density to Developer Meter
5/13/10 handle battery connection properly, move it out of battery and into circuit
5/13/10 add constants to Developer meter
5/13/10 fix Qexcess model
5/13/10 Plate Charge meter: change label, show +- value, red/blue bar based on +-
# 0.00.02 (40610) May 11, 2010
5/11/10 dev version to demonstrate a couple of meters
5/11/10 format numbers in developer meter
5/11/10 add check box, background and close button for developer meter
5/11/10 make meters invisible by default
5/11/10 fix dragging of Plate Charge meter, constrain to canvas, keep visible when canvas is resized
5/11/10 first pass at Plate Charge meter, meter works, close button works, drag behavior is broken
5/11/10 implement questionable model for Qexcess