@@ -1,3 +1,4 @@
+5/19/10 rework model assertions and arg checking
 5/19/10 new model of surface charge density, to avoid divide-by-zero errors when area=0
 5/19/10 assert necessary model conditions
 5/19/10 add support for negative dielectric offset
